@@ -2,14 +2,15 @@ package darkvan.dglabmc.command.cmds;
 
 import darkvan.dglabmc.Client;
 import darkvan.dglabmc.command.CmdException;
-import darkvan.dglabmc.utils.ClientUtils;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static darkvan.dglabmc.DGlabMC.mcUUID;
@@ -31,15 +32,16 @@ public class CommandCtrlPulse extends Command {
     @Override
     protected void errorHandle() throws CmdException {
         if (length == 3) {
-            if (!(sender instanceof Player player)) throw new CmdException("服务器后台请使用 /dglab ctrl-pulse [clientId|player] (A|B|both) (<HEX[]>|clear)");
+            if (!(sender instanceof Player)) throw new CmdException("服务器后台请使用 /dglab ctrl-pulse <clientId|player> (A|B|both) (<HEX[]>|clear)");
+            Player player = (Player) sender;
             if (!isClientExist(player)) throw new CmdException("你还没有绑定的app");
             this.client = getClient(player);
             this.channel = args[1];
             this.hex = args[2].toUpperCase();
         }
         if (length == 4) {
-            if (!ClientUtils.isClientExist(args[1]) && !isClientExist(getPlayer(args[1]))) throw new CmdException("客户端不存在或玩家未绑定");
-            this.client = ClientUtils.isClientExist(args[1]) ? ClientUtils.getClient(args[1]) : getClient(getPlayer(args[1]));
+            if (!isClientExist(args[1]) && !isClientExist(getPlayer(args[1]))) throw new CmdException("客户端不存在或玩家未绑定");
+            this.client = isClientExist(args[1]) ? getClient(args[1]) : getClient(getPlayer(args[1]));
             this.channel = args[2];
             this.hex = args[3].toUpperCase();
         }
@@ -62,12 +64,12 @@ public class CommandCtrlPulse extends Command {
 
     @Override
     public List<String> tabComplete() {
-        if (length == 2) return Stream.concat(Stream.of("A", "B", "both"), playerAndClients().stream()).toList();
+        if (length == 2) return Stream.concat(Stream.of("A", "B", "both"), playerAndClients().stream()).collect(Collectors.toList());
         if (getPlayer(args[1]) != null || isClientExist(args[1])) {
             if (length == 3) return Arrays.asList("A", "B", "both");
-            if (length == 4) return List.of("clear");
+            if (length == 4) return Collections.singletonList("clear");
         } else {
-            if (length == 3) return List.of("clear");
+            if (length == 3) return Collections.singletonList("clear");
         }
         return null;
     }
