@@ -2,7 +2,6 @@ package darkvan.dglabmc.command.cmds;
 
 import darkvan.dglabmc.Client;
 import darkvan.dglabmc.command.CmdException;
-import darkvan.dglabmc.utils.ClientUtils;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
@@ -10,6 +9,7 @@ import org.jetbrains.annotations.NotNull;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static darkvan.dglabmc.DGlabMC.mcUUID;
@@ -31,7 +31,8 @@ public class CommandCtrlStrength extends Command {
     @Override
     protected void errorHandle() throws CmdException {
         if (length == 4) {
-            if (!(sender instanceof Player player)) throw new CmdException("服务器后台请使用 /dglab ctrl-strength <clientId|player> (A|B|both) (add|dec|set) <value>");
+            if (!(sender instanceof Player)) throw new CmdException("服务器后台请使用 /dglab ctrl-strength <clientId|player> (A|B|both) (add|dec|set) <value>");
+            Player player = (Player) sender;
             if (!isClientExist(player)) throw new CmdException("你还没有绑定的app");
             this.client = getClient(player);
             this.channel = args[1];
@@ -39,8 +40,8 @@ public class CommandCtrlStrength extends Command {
             this.value = args[3];
         }
         if (length == 5) {
-            if (!ClientUtils.isClientExist(args[1]) && isClientExist(getPlayer(args[1]))) throw new CmdException("客户端不存在或玩家未绑定");
-            this.client = ClientUtils.isClientExist(args[1]) ? ClientUtils.getClient(args[1]) : getClient(getPlayer(args[1]));
+            if (!isClientExist(args[1]) && isClientExist(getPlayer(args[1]))) throw new CmdException("客户端不存在或玩家未绑定");
+            this.client = isClientExist(args[1]) ? getClient(args[1]) : getClient(getPlayer(args[1]));
             this.channel = args[2];
             this.mode = args[3];
             this.value = args[4];
@@ -63,7 +64,7 @@ public class CommandCtrlStrength extends Command {
 
     @Override
     public List<String> tabComplete() {
-        if (length == 2) return Stream.concat(Stream.of("A", "B", "both"), playerAndClients().stream()).toList();
+        if (length == 2) return Stream.concat(Stream.of("A", "B", "both"), playerAndClients().stream()).collect(Collectors.toList());
         if (getPlayer(args[1]) != null || isClientExist(args[1])) {
             if (length == 3) return Arrays.asList("A", "B", "both");
             if (length == 4) return Arrays.asList("add", "dec", "set");
